plugins/groovy/testdata/highlighting/BuiltInTypeInstantiation.groovy
def x = new <error descr="Instantiation of built-in type">int</error>()